--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="cloudscribe.Core.Web" Version="8.1.0" />
+    <PackageReference Include="cloudscribe.Core.Web" Version="8.1.*" />
     <PackageReference Include="cloudscribe.Core.CompiledViews.Bootstrap3" Version="8.1.0" />
     <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="8.1.0" />
     <PackageReference Include="cloudscribe.Logging.Web" Version="8.1.0" />
